before eval, norm OK, stelie remplaced krozis

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: krozis <krozis@student.42.fr>              +#+  +:+       +#+         #
+#    By: stelie <stelie@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/19 20:20:34 by stelie            #+#    #+#              #
-#    Updated: 2022/06/14 18:49:14 by krozis           ###   ########.fr        #
+#    Updated: 2022/06/28 14:01:39 by stelie           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
